# RNAFold-Transformer

./: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
configs/: default.yaml
data/: README.md
docs/: github_push_guide.md  methodology.md
notebooks/: original_rna_3d_folding_experiment.ipynb
results/: metrics_summary.csv  metrics_summary.json  training_history_from_notebook.csv
scripts/: evaluate.py  plot_nussinov_example.py  train.py
src/rna3d_folding/: __init__.py  config.py  data.py  evaluate.py  features.py  metrics.py  model.py  msa.py  nussinov.py  plotting.py  train.py  utils.py
tests/: test_model.py  test_nussinov.py
